# DulekLang

./: .gitignore  CMakeLists.txt  Main.du
Du/: CMakeLists.txt
Du/Program/: Parser.cpp  Parser.hpp  Settings.h  main.cpp
Du/Terminal/: StandardTerminal.cpp  Terminal.cpp  Terminal.hpp
Du/ast/: AstBuildSystem.hpp  AstBuilder.hpp  AstCallFun.cpp  AstCallFun.hpp  AstCast.cpp  AstCast.hpp  AstConst.hpp  AstControlBlock.h  AstDecorator.hpp  AstElement.cpp  AstElement.hpp  AstExpr.cpp  AstExpr.hpp  AstFactor.cpp  AstFactor.hpp  AstList.hpp  AstReference.h  AstScope.cpp  AstScope.hpp  AstStatement.cpp  AstStatement.hpp  AstType.cpp  AstType.hpp  AstUniqueCast.cpp  AstVariableDecl.cpp  AstVariableDecl.hpp  AstVisitor.hpp  BasicType.hpp  CastGraph.hpp  ScopeDecorator.cpp  ScopeDecorator.hpp  VariableDecorator.cpp  VariableDecorator.hpp
Du/lexer/: scanner.l
Du/llvm_gen/: llvm_cache.hpp  llvm_generator.cpp  llvm_generator.h  llvm_output_process.h  llvm_scope_generator.hpp  llvm_stmt_generator.hpp  llvm_type_generator.hpp
Du/parser/: parser.y
Du/semantic_analyzer/: semantic_analyzer.h  type_checker.h
DulekLangTests/: AllocatorTest.h  AstBuilderTest.h  AstScopeTests.h  CMakeLists.txt  CastTest.h  main.cpp
StdLib/: CMakeLists.txt
StdLib/MemoryMenagment/: memory_menagment.cpp  memory_menagment.h
StdLib/Tests/: CMakeLists.txt  main.cpp  memory_menagment_test.h
include_3rd_party/gnu/: unistd.h
include_3rd_party/googletest/src/googletest-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt
include_3rd_party/googletest/src/googletest-build/googlemock/: CTestTestfile.cmake  cmake_install.cmake
include_3rd_party/googletest/src/googletest-build/googletest/: CTestTestfile.cmake  cmake_install.cmake
include_3rd_party/googletest/src/googletest-build/lib/: gtest_main.lib  gtest_maind.lib
include_3rd_party/googletest/src/googletest-stamp/: googletest-gitinfo.txt  googletest-update-info.txt
include_3rd_party/googletest/tmp/: googletest-cfgcmd.txt  googletest-gitclone.cmake  googletest-gitupdate.cmake  googletest-mkdirs.cmake
